[feat] update & console print

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 SHOW_TABLE=true
+
+INFLUXDB_URL=http://influxdb:8086
+INFLUXDB_TOKEN=watchcat-token
+INFLUXDB_ORG=watchcat_org
+INFLUXDB_BUCKET=watchcat
