--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,12 @@ dependencies = [
     "tabulate (>=0.9.0,<0.10.0)",
     "rich (>=14.0.0,<15.0.0)",
     "pyyaml (>=6.0.2,<7.0.0)",
-    "influxdb-client (>=1.49.0,<2.0.0)"
+    "influxdb-client (>=1.49.0,<2.0.0)",
+    "psycopg2-binary (>=2.9.10,<3.0.0)",
+    "urllib3 (>=2.5.0,<3.0.0)",
+    "certifi (>=2025.7.14,<2026.0.0)",
+    "httpx (>=0.28.1,<0.29.0)",
+    "lxml (>=6.0.0,<7.0.0)"
 ]
 
 [tool.poetry.dependencies]
