[data] add new members to yml

--- a/data/stocks.yml
+++ b/data/stocks.yml
@@ -1,11 +1,19 @@
 stocks:
-  "006800": 미래에셋증권
-  "003530": 한화투자증권
-  "005940": NH투자증권
-  "071050": 한국투자금융지주
-  "039490": 키움증권
-  "016360": 삼성증권
-  "003540": 대신증권
-  "003470": 유안타증권
-  "001720": 신한금융투자
-  "105560": KB증권
+  "006800": "미래에셋증권"
+  "003530": "한화투자증권"
+  "005940": "NH투자증권"
+  "071050": "한국투자금융지주"
+  "039490": "키움증권"
+  "016360": "삼성증권"
+  "003540": "대신증권"
+  "003470": "유안타증권"
+  "001720": "신한금융투자"
+  "105560": "KB증권"
+  "0074K0": "KoAct K수출핵심기업 TOP30 액티브"
+  "228790": "TIGER 화장품"
+  "475070": "KoAct 글로벌친환경"
+  "0080G0": "KODEX K방산TOP10"
+  "466940": "TIGER 은행 고배당플러스"
+  "069500": "KODEX 200"
+  "229200": "KODEX 코스닥150"
+  "102110": "TIGER 200"
