--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       options:
         max-size: "10m"    # 하나의 로그 파일 최대 크기
         max-file: "5"      # 최대 파일 수
+    networks:
+      - watchcat-net
 
   influxdb:
     image: influxdb:2.7
@@ -22,6 +24,7 @@ services:
       - "8086:8086"
     volumes:
       - influxdb-data:/var/lib/influxdb2
+      - ./init:/docker-entrypoint-initdb.d
     environment:
       - DOCKER_INFLUXDB_INIT_MODE=setup
       - DOCKER_INFLUXDB_INIT_USERNAME=admin
@@ -29,6 +32,8 @@ services:
       - DOCKER_INFLUXDB_INIT_ORG=watchcat_org
       - DOCKER_INFLUXDB_INIT_BUCKET=watchcat
       - DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=watchcat-token
+    networks:
+      - watchcat-net
 
   grafana:
     image: grafana/grafana-oss:latest
@@ -39,7 +44,14 @@ services:
       - influxdb
     volumes:
       - grafana-storage:/var/lib/grafana
+    networks:
+      - watchcat-net
 
 volumes:
   influxdb-data:
   grafana-storage:
+
+networks:
+  watchcat-net:
+    name: watchcat-net
+    driver: bridge
