--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,9 @@ dependencies = [
     "urllib3 (>=2.5.0,<3.0.0)",
     "certifi (>=2025.7.14,<2026.0.0)",
     "httpx (>=0.28.1,<0.29.0)",
-    "lxml (>=6.0.0,<7.0.0)"
+    "lxml (>=6.0.0,<7.0.0)",
+    "finance-datareader (>=0.9.96,<0.10.0)",
+    "sqlalchemy (>=2.0.42,<3.0.0)"
 ]
 
 [tool.poetry.dependencies]
@@ -29,3 +31,10 @@ python = ">=3.11,<4.0"
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry]
+name = "watchcat"
+version = "0.1.0"
+description = ""
+authors = ["HG <differentg021@gmail.com>"]
+packages = [{ include = "stocker" }]
