--- a/.env
+++ b/.env
@@ -2,3 +2,9 @@ INFLUXDB_URL=http://influxdb:8086
 INFLUXDB_TOKEN=watchcat-token
 INFLUXDB_ORG=watchcat_org
 INFLUXDB_BUCKET=watchcat
+
+DB_USER=mcesos
+DB_PASS=mcesos2024@
+DB_HOST=10.2.0.24
+DB_PORT=5432
+DB_NAME=gisdb
